Change owner name

--- a/wp-content/themes/flatsome/style.css
+++ b/wp-content/themes/flatsome/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name: WebDaiTin.com
-Theme URI: https://WebDaiTin.com/
-Author: WebDaiTin.com
-Author URI: https://WebDaiTin.com/
+Theme Name: Secret.com
+Theme URI: https://Secret.com/
+Author: Secret.com
+Author URI: https://Secret.com/
 Description: Thiết kế web bởi Web Đại Tín
 Version: 3.8.3
 Text Domain: flatsome
@@ -12,6 +12,6 @@ License URI: http://themeforest.net/licenses
 
 
 /***************
-All custom CSS should be added to WebDaiTin > Advanced > Custom CSS,
+All custom CSS should be added to Secret > Advanced > Custom CSS,
 or in the style.css of a Child Theme.
 ***************/
