--- a/wp-content/themes/flatsome/style.css
+++ b/wp-content/themes/flatsome/style.css
@@ -3,7 +3,7 @@ Theme Name: Secret.com
 Theme URI: https://Secret.com/
 Author: Secret.com
 Author URI: https://Secret.com/
-Description: Thiết kế web bởi Web Đại Tín
+Description: Thiết kế web bởi Secret
 Version: 3.8.3
 Text Domain: flatsome
 License: http://themeforest.net/licenses
