--- a/wp-content/themes/flatsome/style.css
+++ b/wp-content/themes/flatsome/style.css
@@ -76,6 +76,6 @@ html,body,p,h1,h2,h3,h4,h5,h6,em,strong,span,a  {
 /* Custom CSS Mobile */
 @media (max-width: 549px){
 	.category-filtering{
-		border: 1px solid #393939;
+		border: 1px solid #f78031;
 	}
 }
